iptables.txt
# Generated by iptables-save v1.4.21 on Tue Nov 20 17:47:08 2018          # == IPTABLES FIREWALL RULES ON THE SERVER ==
#
# iptables-restore < iptables.txt
#
# To back up current iptables firewall rules,
# iptables-save > iptables.bak
#
*filter                                                                   #
:INPUT DROP [0:0]                                                         # Default Policy:
:FORWARD ACCEPT [0:0]                                                     # DROP.
:OUTPUT DROP [0:0]                                                        # 
-A INPUT -s ${ipBanned}/32 -p tcp -m tcp --dport 22 -j DROP               # 1i. Ban ipBanned from connecting to server by ssh.
-A OUTPUT -d ${ipBanned}/32 -p tcp -m tcp --sport 22 -j DROP              # 1o. 
-A INPUT -s ${LANrange}/${LANnetmask} -p tcp -m tcp --dport 22 -j ACCEPT  # 2i. Allow LAN hosts to connect to server by ssh.
-A OUTPUT -d ${LANrange}/${LANnetmask} -p tcp -m tcp --sport 22 -j ACCEPT # 2o.
-A INPUT -p tcp -m tcp --dport 22 -j DROP                                 # 3i. Ban server to connect to other hosts by ssh.
-A OUTPUT -p tcp -m tcp --sport 22 -j DROP                                # 3o.
-A OUTPUT -d ${ipWebBanned}/32 -p tcp -m tcp --dport 80 -j DROP           # 4i. Ban server to make HTTP requests to ipWebBanned.
-A OUTPUT -d ${ipWebBanned}/32 -p tcp -m tcp --dport 80 -j DROP           # 4o. 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT                               # 5i. Allow HTTP requests to server.
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT                              # 5o.
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT                              # 6i. Allow HTTPS requests to server.
-A OUTPUT -p tcp -m tcp --sport 443 -j ACCEPT                             # 6o.
-A OUTPUT -p tcp -m tcp --sport 22 -j DROP --tcp-flags SYN,ACK SYN        # 7i. Ban any other connection to server initiated from outside.
-A OUTPUT -s ${ipServer}/32 -p tcp -m state --state NEW -j ACCEPT         # 8a. Allow any other connection
-A INPUT -d ${ipServer}/32 -p tcp -m state --state ESTABLISHED -j ACCEPT  # 8b. not explicitely banned
-A OUTPUT -s ${ipServer}/32 -p tcp -m state --state ESTABLISHED -j ACCEPT # 8c. below.
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT                       # 9i1. Allow ping and traceroute.
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT                         # 9i2.
-A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT                        # 9o1.
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT                      # 9o2.
-A INPUT -p udp -m udp --sport 53 -j ACCEPT                               # 10i. Allow DNS.
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT                              #
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT                               #
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT                              #
COMMIT
# Completed on Tue Nov 20 17:47:08 2018
